<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>

    <string name="strName">이름 : </string>
    <string name="strCount">인원 : </string>
    <string name="strReset">초기화</string>
    <string name="strInput">입력</string>
    <string name="strModify">수정</string>
    <string name="strDelete">삭제</string>
    <string name="strSearch">조회</string>
</resources>
